youfull/objects/User_Sales_Org_Hierarchy_Util__c.object
<CustomObject>
    <description>System object. Used for ZM transfer scenarios. Should not be created/edited/deleted manually.</description>
    <fields>
        <fullName>ACCT_NR__c</fullName>
        <label>ACCT_NR</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ACCT_NR_SLS_ORG_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ACCT_NR_SLS_ORG_KEY</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>User_Sales_Org_Hierarchy_Utils</relationshipLabel>
        <relationshipName>User_Sales_Org_Hierarchy_Utils</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_CD__c</fullName>
        <label>SLS_ORG_CD</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ORG_LVL_CD__c</fullName>
        <label>SLS_ORG_LVL_CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>User_Sales_Org_Hierarchy_Util</label>
    <nameField>
        <displayFormat>USOHU-{0}</displayFormat>
        <label>User_Sales_Org_Hierarchy Util Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User_Sales_Org_Hierarchy_Utils</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>